--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -21,6 +21,7 @@
         <module>provider</module>
         <module>gateway</module>
         <module>hystrix</module>
+        <module>oauth2</module>
     </modules>
 
     <properties>
