--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -22,6 +22,7 @@
         <module>gateway</module>
         <module>hystrix</module>
         <module>oauth2</module>
+        <module>security</module>
     </modules>
 
     <properties>
