--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -21,7 +21,6 @@
         <module>gateway</module>
         <module>oauth2-server</module>
         <module>security</module>
-        <module>feign-service</module>
         <module>user-service</module>
         <module>oauth2-jwt-server</module>
         <module>oauth2-client</module>
@@ -33,6 +32,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
