--- a/springcloud/provider/src/main/resources/application.yml
+++ b/springcloud/provider/src/main/resources/application.yml
@@ -24,6 +24,18 @@ spring:
       # 数据库连接超时时间,默认30秒，即30000
       connection-timeout: 30000
       connection-test-query: SELECT 1
+  redis:
+    host: 192.168.109.130 # Redis服务器地址
+    database: 0 # Redis数据库索引（默认为0）
+    port: 6379 # Redis服务器连接端口
+    password: 123456 # Redis服务器连接密码（默认为空）
+    jedis:
+      pool:
+        max-active: 8 # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 8 # 连接池中的最大空闲连接
+        min-idle: 0 # 连接池中的最小空闲连接
+    timeout: 3000ms # 连接超时时间（毫秒）
 eureka:
   client:
     service-url:
@@ -36,18 +48,6 @@ info:
   company.tel: 1234
   app.name: provider-service
   author: jeason
-redis:
-  host: localhost # Redis服务器地址
-  database: 0 # Redis数据库索引（默认为0）
-  port: 6379 # Redis服务器连接端口
-  password: root123 # Redis服务器连接密码（默认为空）
-  jedis:
-    pool:
-      max-active: 8 # 连接池最大连接数（使用负值表示没有限制）
-      max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
-      max-idle: 8 # 连接池中的最大空闲连接
-      min-idle: 0 # 连接池中的最小空闲连接
-  timeout: 3000ms # 连接超时时间（毫秒）
 mybatis:
   mapper-locations:
     - classpath:mapper/*.xml
